--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
     "axios": "^1.7.3",
+    "lodash.debounce": "^4.0.8",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3"
   },
